# SMS-Panel-for-Gearbox-Factory

./: .env  OTP_functions.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
